# itlabs

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_05_21_1303-44693fa6e7f7_create_tables.py  2025_05_21_1308-4c11aa8d0d8d_create_guests.py  2025_05_21_1311-d3e822ea26f5_seeder_tables.py  2025_05_21_1316-0c94e6b8d1cf_seeder_guests.py  2025_05_21_1918-42df33738fc4_create_admins.py  2025_05_21_1919-361b33f64ef9_seeder_admins.py
src/: __init__.py  config.py  main.py  models.py
src/admins/: main.py  models.py  views.py
src/guests/: dao.py  models.py  router.py  schemas.py  service.py
src/tables/: dao.py  models.py  router.py  schemas.py  service.py
tests/: conftest.py  test_guests.py  test_tables.py
